@@ -14,6 +14,7 @@ post-v1.11.0
     - Database names are now mandatory when specifying ovsdb-server options
       through database paths (e.g. Private key option with the database name
       should look like "--private-key=db:Open_vSwitch,SSL,private_key").
+    - Added ovs-dev.py, a utility script helpful for Open vSwitch developers.
 
 
 v1.11.0 - xx xxx xxxx
